@@ -37,6 +37,7 @@ Changes in openair 0.9-0 [2013-02-13]
 *	Add Oslo and Rotterdam to trajectory database for 2010-2012
 *	Better limits control on calendarPlot, use first year if not
 	supplied, add option month to allow only selected month(s)
+*	Fix bug when type = "wd" and some are missing (remove them)
 
 
 Changes in openair 0.8-0 [2012-11-30]
